fix legibility on password recovery

--- a/css/main.css
+++ b/css/main.css
@@ -8972,6 +8972,16 @@ body.login .logo {
   display: block;
   text-decoration: none;
 }
+body.login .form-group .control-label small {
+  opacity: 100;
+  filter: alpha(opacity=10000);
+}
+body.login .form-group .control-label small a {
+  font-size: 13px;
+  color: #ffffff !important;
+  opacity: 100;
+  filter: alpha(opacity=10000);
+}
 body.login .form-group label {
   color: #fff;
   font-weight: bold;
