--- a/less/pages/login.less
+++ b/less/pages/login.less
@@ -13,6 +13,18 @@
     }
 
     .form-group {
+
+      .control-label {
+        small  {
+            .opacity(100);
+          a {
+            font-size: 13px;
+            color:#ffffff !important;
+            .opacity(100);
+          }
+        }
+      }
+
       label {
         color:#fff;
         font-weight: bold;
